# minepy_v2

./: README.md  enviroment.yml  pyproject.toml
src/minepy/class_mi/: batch_sampler.py  class_mi.py  models.py
src/minepy/mi_nee/: batch_sampler.py  h_nee.py  models.py  ref_distributions.py
src/minepy/mine/: batch_sampler.py  mine.py  models.py
src/minepy/utils/: systems.py  utils.py
test/test_class_mi/: test_class_mi.py
test/test_hnee/: test_hnee.py
test/test_mine/: test_mine.py
